User story 7 completed with passing test

--- a/app/views/ski_resorts/show.html.erb
+++ b/app/views/ski_resorts/show.html.erb
@@ -10,5 +10,6 @@
   <p>Altitude: <%=@ski_resort.altitude%></p>
   <p>Average snow fall: <%=@ski_resort.avg_snowfall%></p>
   <p>Location: <%=@ski_resort.location%></p>
+  <p>Ski Runs: <%=@ski_resort.count_runs %> </p>
   </h3>
 </div>
