--- a/app/views/ski_resort_runs/index.html.erb
+++ b/app/views/ski_resort_runs/index.html.erb
@@ -1,5 +1,11 @@
-
+<a href="/ski_runs"> All Ski Runs </a>
 <% @ski_runs.each do |ski_run| %>
 
   <p> <%=  ski_run.name %> </p>
+  <li> Is the run open? <%= ski_run.open %></li>
+  <li> Distance: <%= ski_run.distance %> miles</li>
+  <li> Is this a green? <%= ski_run.green %></li>
+  <li> Is this a blue? <%= ski_run.blue %></li>
+  <li> Is this a black? <%= ski_run.black %></li>
+  <li>Run condition: <%= ski_run.condition %></li>
 <% end %>
