--- a/app/views/ski_resorts/index.html.erb
+++ b/app/views/ski_resorts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>ALL RESORTS</h1>
+<a href="/ski_runs"> All Ski Runs </a>
 <% @ski_resorts.sorted.each do |ski_resort| %>
 
     <h3> <%= ski_resort.name %> </h3>
