User story 9 complete with spec

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <a href="/ski_runs"> All Ski Runs </a>
+    <p><a href="/ski_resorts"> All Ski Resorts </a></p> 
     <%= yield %>
   </body>
 </html>
