--- a/app/views/ski_resorts/show.html.erb
+++ b/app/views/ski_resorts/show.html.erb
@@ -3,8 +3,9 @@
   <h1>
   <%= @ski_resort.name%>
   </h1>
+   <%= link_to  "Ski Runs at #{@ski_resort.name} ", "/ski_resorts/#{@ski_resort.id}/ski_runs"   %>
   <h4>
-  <%="Number of lifts:#{@ski_resort.lifts}"%>
+  <%= "Number of lifts:#{@ski_resort.lifts}" %>
   <p>Back-country access? <%= @ski_resort.backcountry_access%></p>
   <p>Number of employees: <%=@ski_resort.employee%></p>
   <p>Snowboarders permitted? <%=@ski_resort.snowboarder_permitted%></p>
