--- a/app/views/ski_resorts/new.html.erb
+++ b/app/views/ski_resorts/new.html.erb
@@ -12,9 +12,9 @@
   <%= form.text_field :avg_snowfall %></p>
   <p><%= form.label :location %>
   <%= form.text_field :location %></p>
-  <p><%= form.label :snowboarder_permitted %>
+  <p><%= form.label :snowboarder_permitted %> (True or False)
   <%= form.text_field :snowboarder_permitted %></p>
-  <p><%= form.label :backcountry_access %>
+  <p><%= form.label :backcountry_access %> (True or False)
   <%= form.text_field :backcountry_access %></p>
   <p><%= form.submit 'Add Ski Resort' %></p>
 
