--- a/app/views/ski_resorts/show.html.erb
+++ b/app/views/ski_resorts/show.html.erb
@@ -4,6 +4,7 @@
   <%= @ski_resort.name %>
   </h1>
    <%= link_to  "Ski Runs at #{@ski_resort.name} ", "/ski_resorts/#{@ski_resort.id}/ski_runs"   %>
+    <p><%= link_to 'Update', "/ski_resorts/#{@ski_resort.id}/edit", method: :get %></p>
   <h4>
   <%= "Number of lifts:#{@ski_resort.lifts}" %>
   <p>Back-country access? <%= @ski_resort.backcountry_access%></p>
