--- a/app/views/ski_resort_runs/index.html.erb
+++ b/app/views/ski_resort_runs/index.html.erb
@@ -1,4 +1,4 @@
-
+<%= link_to 'New Ski Run', "/ski_resorts/#{@ski_resort.id}/ski_runs/new" %>
 <% @ski_runs.each do |ski_run| %>
 <div id="runs-<%= ski_run.id %>">
 
