--- a/app/views/ski_resorts/index.html.erb
+++ b/app/views/ski_resorts/index.html.erb
@@ -2,8 +2,11 @@
 <%= link_to 'New Ski Resort', '/ski_resorts/new' %>
 
 <% @ski_resorts.sorted.each do |ski_resort| %>
-
+  <div id=ski-resort-<%= ski_resort.id %>>
     <h3> <%= ski_resort.name %> </h3>
-    <p> Created at: <%= ski_resort.created_at %> </p>
-
+    <ul>
+      <li> Created at: <%= ski_resort.created_at %> </li>
+      <li><%= link_to 'Update', "/ski_resorts/#{ski_resort.id}/edit" %></li>
+    </ul>
+  </div>
 <% end %>
