--- a/app/views/ski_runs/index.html.erb
+++ b/app/views/ski_runs/index.html.erb
@@ -1,6 +1,8 @@
 <h1>All Ski Runs</h1>
 <% @ski_runs.each do |ski_run| %>
   <h4><%= ski_run.name.titleize %></h4>
+  <div id=ski-run-<%= ski_run.id %>>
+  <p><%= link_to 'Update', "/ski_runs/#{ski_run.id}/edit", method: :get %></p>
   <ul>
     <li> Is the run open? <%= ski_run.open %></li>
     <li> Distance: <%= ski_run.distance %> miles</li>
@@ -9,4 +11,6 @@
     <li> Is this a black? <%= ski_run.black %></li>
     <li>Run condition: <%= ski_run.condition %></li>
   </ul>
+</div>
+
 <% end %>
