--- a/app/views/ski_runs/show.html.erb
+++ b/app/views/ski_runs/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @ski_run.name.titleize %></h1>
 <p><%= link_to 'Update', "/ski_runs/#{@ski_run.id}/edit", method: :get %></p>
+<p><%= link_to 'Delete', "/ski_runs/#{@ski_run.id}", method: :delete %></p>
 <ul>
   <li> Is the run open? <%= @ski_run.open %></li>
   <li> Distance: <%= @ski_run.distance %> miles</li>
