--- a/app/views/ski_resort_runs/index.html.erb
+++ b/app/views/ski_resort_runs/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'New Ski Run', "/ski_resorts/#{@ski_resort.id}/ski_runs/new" %>
-<%= link_to 'Order', "/ski_resorts/#{@ski_resort.id}/ski_runs?sort-by=name" %>
+<p><%= link_to 'Order', "/ski_resorts/#{@ski_resort.id}/ski_runs?sort-by=name" %></p>
 
 <% @ski_runs.each do |ski_run| %>
 <div id="runs-<%= ski_run.id %>">
@@ -13,3 +13,9 @@
   <li>Run condition: <%= ski_run.condition %></li>
   <% end %>
 </div>
+
+<%= form_with url: "/ski_resorts/#{@ski_resort.id}/ski_runs", method: :get, local: true do |form| %>
+<p><%= form.label :distance, 'Ski runs with a distance greater than'%>
+<%= form.text_field :distance %></p>
+<p><%= form.submit 'Submit' %></p>
+<% end %>
