--- a/app/views/ski_resort_runs/index.html.erb
+++ b/app/views/ski_resort_runs/index.html.erb
@@ -3,14 +3,14 @@
 
 <% @ski_runs.each do |ski_run| %>
 <div id="runs-<%= ski_run.id %>">
-
-  <p> <%=  ski_run.name.titleize %> </p>
+  <h3> <%=  ski_run.name.titleize %> </h3>
   <li> Is the run open? <%= ski_run.open %></li>
   <li> Distance: <%= ski_run.distance %> miles</li>
   <li> Is this a green? <%= ski_run.green %></li>
   <li> Is this a blue? <%= ski_run.blue %></li>
   <li> Is this a black? <%= ski_run.black %></li>
   <li>Run condition: <%= ski_run.condition %></li>
+  <%= link_to "Delete #{ski_run.name}", "/ski_runs/#{ski_run.id}", method: :delete %>
   <% end %>
 </div>
 
